--- a/package.json
+++ b/package.json
@@ -4,18 +4,13 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
-    "build:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt build",
-    "generate:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt generate",
-    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
+    "generate": "nuxt generate"
   },
   "dependencies": {
-    "mini.css": "^3.0.1",
-    "nuxt": "^2.8.1"
+    "nuxt": "^2.10.2"
   },
   "devDependencies": {
-    "node-sass": "^4.12.0",
-    "push-dir": "^0.4.1",
-    "sass-loader": "^7.1.0"
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0"
   }
 }
